<resources>
    <string name="app_name">My Quiz</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="high_score">High Score</string>
    <string name="score">0</string>
    <string name="todo">TODO</string>
    <string name="_00_23">00:23</string>
    <string name="confirm">Confirm</string>
    <string name="here_will_be_the_question">Here will be the question</string>
    <string name="option_1">Option 1</string>
    <string name="question_1_x">Question: 1/x</string>
    <string name="score_0">Score: 0</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
</resources>
