<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgr_app"
    android:padding="16dp"
    tools:context=".activity.Start">

    <TextView
        android:id="@+id/tvScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:freezesText="true"
        android:text="@string/score_0"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tv_total_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvScore"
        android:freezesText="true"
        android:text="@string/question_1_x"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tvCountDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:freezesText="true"
        android:text="@string/_00_23"
        android:textColor="@android:color/black"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/tvQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rdGroup"
        android:layout_marginBottom="24dp"
        android:freezesText="true"
        android:text="@string/here_will_be_the_question"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/rdGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <RadioButton
            android:id="@+id/radio_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:text="@string/option_1" />

        <RadioButton
            android:id="@+id/radio_button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:text="@string/option_2" />

        <RadioButton
            android:id="@+id/radio_button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:text="@string/option_3" />


    </RadioGroup>

    <Button
        android:textColor="@android:color/white"
        android:background="@drawable/round_corner"
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rdGroup"
        android:layout_marginTop="16dp"
        android:freezesText="true"
        android:text="@string/confirm" />


</RelativeLayout>